--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,25 @@
-body {
+/** @format */
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  height: 100vh;
+}
+.layout {
+  display: grid;
+  grid-template-areas: "header" "main" "footer";
+  height: 100%;
+  grid-template-rows: 80px 1fr 80px;
+}
+
+main {
+  grid-area: main;
+}
+footer {
+  grid-area: footer;
 }
