--- a/client/src/css/Footer/Footer.css
+++ b/client/src/css/Footer/Footer.css
@@ -1,7 +1,6 @@
 /** @format */
-
-header {
-  grid-area: header;
+footer {
+  grid-area: footer;
   background-color: #2a5ea5;
   color: #fff;
   display: flex;
