--- a/client/src/css/Header/Header.css
+++ b/client/src/css/Header/Header.css
@@ -2,7 +2,7 @@
 header {
   grid-area: header;
   background-color: #2a5ea5;
-  color: #fff;
+  color: whitesmoke;
   display: flex;
   justify-content: center;
   align-items: center;
